src/main/java/masterball/compiler/frontend/parser/MxStarParser.java
// Generated from src/masterball/compiler/frontend/parser/MxStar.g4 by ANTLR 4.7.2

package masterball.compiler.frontend.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MxStarParser extends Parser {
    public static final int
            AddOp = 1, SubOp = 2, MulOp = 3, DivOp = 4, ModOp = 5, GreaterOp = 6, LessOp = 7, GreaterEqualOp = 8,
            LessEqualOp = 9, NotEqualOp = 10, EqualOp = 11, LogicAndOp = 12, LogicOrOp = 13,
            LogicNotOp = 14, ArithShiftLeftOp = 15, ArithShiftRightOp = 16, BitAndOp = 17,
            BitOrOp = 18, BitXorOp = 19, BitNotOp = 20, AssignOp = 21, IncrementOp = 22, DecrementOp = 23,
            MemberOp = 24, LeftBracket = 25, RightBracket = 26, LeftParen = 27, RightParen = 28,
            SemiColon = 29, Comma = 30, LeftBrace = 31, RightBrace = 32, QuoteOp = 33, LambdaStartSymbol = 34,
            LambdaArrowSymbol = 35, IntType = 36, BoolType = 37, StringType = 38, VoidType = 39,
            NullConstant = 40, TrueConstant = 41, FalseConstant = 42, IfKw = 43, ElseKw = 44,
            ForKw = 45, WhileKw = 46, BreakKw = 47, ContinueKw = 48, ReturnKw = 49, NewKw = 50,
            ClassKw = 51, ThisPointer = 52, WhitespaceEater = 53, NewlineEater = 54, LineCommentEater = 55,
            BlockCommentEater = 56, Identifier = 57, IntegerConstant = 58, EscapeEnter = 59,
            EscapeBackslash = 60, EscapeQuote = 61, StringContent = 62, StringConstant = 63;
    public static final int
            RULE_mxStarCode = 0, RULE_classDef = 1, RULE_classConstructorDef = 2,
            RULE_funcDef = 3, RULE_funcDefArgs = 4, RULE_funcCallArgs = 5, RULE_builtinType = 6,
            RULE_varDefType = 7, RULE_newExpSizeDeclaration = 8, RULE_varDefBody = 9,
            RULE_varDefSingle = 10, RULE_suite = 11, RULE_varDefStmt = 12, RULE_ifStmt = 13,
            RULE_whileStmt = 14, RULE_forInit = 15, RULE_forStmt = 16, RULE_returnStmt = 17,
            RULE_controlStmt = 18, RULE_pureStmt = 19, RULE_suiteStmt = 20, RULE_statement = 21,
            RULE_prefixOps = 22, RULE_postfixOps = 23, RULE_unaryOps = 24, RULE_shiftOps = 25,
            RULE_mulLevelOps = 26, RULE_addLevelOps = 27, RULE_compareOps = 28, RULE_equalOps = 29,
            RULE_expression = 30, RULE_atom = 31;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;
    public static final ATN _ATN =
            new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public MxStarParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[]{
                "mxStarCode", "classDef", "classConstructorDef", "funcDef", "funcDefArgs",
                "funcCallArgs", "builtinType", "varDefType", "newExpSizeDeclaration",
                "varDefBody", "varDefSingle", "suite", "varDefStmt", "ifStmt", "whileStmt",
                "forInit", "forStmt", "returnStmt", "controlStmt", "pureStmt", "suiteStmt",
                "statement", "prefixOps", "postfixOps", "unaryOps", "shiftOps", "mulLevelOps",
                "addLevelOps", "compareOps", "equalOps", "expression", "atom"
        };
    }

    private static String[] makeLiteralNames() {
        return new String[]{
                null, "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", "'>='", "'<='",
                "'!='", "'=='", "'&&'", "'||'", "'!'", "'<<'", "'>>'", "'&'", "'|'",
                "'^'", "'~'", "'='", "'++'", "'--'", "'.'", "'['", "']'", "'('", "')'",
                "';'", "','", "'{'", "'}'", "'\"'", "'[&]'", "'->'", "'int'", "'bool'",
                "'string'", "'void'", "'null'", "'true'", "'false'", "'if'", "'else'",
                "'for'", "'while'", "'break'", "'continue'", "'return'", "'new'", "'class'",
                "'this'", null, null, null, null, null, null, "'\\n'", "'\\\\'", "'\\\"'"
        };
    }

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "AddOp", "SubOp", "MulOp", "DivOp", "ModOp", "GreaterOp", "LessOp",
                "GreaterEqualOp", "LessEqualOp", "NotEqualOp", "EqualOp", "LogicAndOp",
                "LogicOrOp", "LogicNotOp", "ArithShiftLeftOp", "ArithShiftRightOp", "BitAndOp",
                "BitOrOp", "BitXorOp", "BitNotOp", "AssignOp", "IncrementOp", "DecrementOp",
                "MemberOp", "LeftBracket", "RightBracket", "LeftParen", "RightParen",
                "SemiColon", "Comma", "LeftBrace", "RightBrace", "QuoteOp", "LambdaStartSymbol",
                "LambdaArrowSymbol", "IntType", "BoolType", "StringType", "VoidType",
                "NullConstant", "TrueConstant", "FalseConstant", "IfKw", "ElseKw", "ForKw",
                "WhileKw", "BreakKw", "ContinueKw", "ReturnKw", "NewKw", "ClassKw", "ThisPointer",
                "WhitespaceEater", "NewlineEater", "LineCommentEater", "BlockCommentEater",
                "Identifier", "IntegerConstant", "EscapeEnter", "EscapeBackslash", "EscapeQuote",
                "StringContent", "StringConstant"
        };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "MxStar.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public final MxStarCodeContext mxStarCode() throws RecognitionException {
        MxStarCodeContext _localctx = new MxStarCodeContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_mxStarCode);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(69);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << BoolType) | (1L << StringType) | (1L << VoidType) | (1L << ClassKw) | (1L << Identifier))) != 0)) {
                    {
                        setState(67);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(64);
                                classDef();
                            }
                            break;
                            case 2: {
                                setState(65);
                                funcDef();
                            }
                            break;
                            case 3: {
                                setState(66);
                                varDefStmt();
                            }
                            break;
                        }
                    }
                    setState(71);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(72);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ClassDefContext classDef() throws RecognitionException {
        ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_classDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(74);
                match(ClassKw);
                setState(75);
                match(Identifier);
                setState(76);
                match(LeftBrace);
                setState(82);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << BoolType) | (1L << StringType) | (1L << VoidType) | (1L << Identifier))) != 0)) {
                    {
                        setState(80);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 2, _ctx)) {
                            case 1: {
                                setState(77);
                                classConstructorDef();
                            }
                            break;
                            case 2: {
                                setState(78);
                                varDefStmt();
                            }
                            break;
                            case 3: {
                                setState(79);
                                funcDef();
                            }
                            break;
                        }
                    }
                    setState(84);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(85);
                match(RightBrace);
                setState(86);
                match(SemiColon);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ClassConstructorDefContext classConstructorDef() throws RecognitionException {
        ClassConstructorDefContext _localctx = new ClassConstructorDefContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_classConstructorDef);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                match(Identifier);
                setState(89);
                match(LeftParen);
                setState(90);
                match(RightParen);
                setState(91);
                suite();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncDefContext funcDef() throws RecognitionException {
        FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_funcDef);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(93);
                varDefType();
                setState(94);
                match(Identifier);
                setState(95);
                match(LeftParen);
                setState(97);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << BoolType) | (1L << StringType) | (1L << VoidType) | (1L << Identifier))) != 0)) {
                    {
                        setState(96);
                        funcDefArgs();
                    }
                }

                setState(99);
                match(RightParen);
                setState(100);
                suite();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncDefArgsContext funcDefArgs() throws RecognitionException {
        FuncDefArgsContext _localctx = new FuncDefArgsContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_funcDefArgs);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(102);
                varDefType();
                setState(103);
                match(Identifier);
                setState(110);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == Comma) {
                    {
                        {
                            setState(104);
                            match(Comma);
                            setState(105);
                            varDefType();
                            setState(106);
                            match(Identifier);
                        }
                    }
                    setState(112);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final FuncCallArgsContext funcCallArgs() throws RecognitionException {
        FuncCallArgsContext _localctx = new FuncCallArgsContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_funcCallArgs);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(113);
                match(LeftParen);
                setState(122);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AddOp) | (1L << SubOp) | (1L << LogicNotOp) | (1L << BitNotOp) | (1L << IncrementOp) | (1L << DecrementOp) | (1L << LeftParen) | (1L << LambdaStartSymbol) | (1L << NullConstant) | (1L << TrueConstant) | (1L << FalseConstant) | (1L << NewKw) | (1L << ThisPointer) | (1L << Identifier) | (1L << IntegerConstant) | (1L << StringConstant))) != 0)) {
                    {
                        setState(114);
                        expression(0);
                        setState(119);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == Comma) {
                            {
                                {
                                    setState(115);
                                    match(Comma);
                                    setState(116);
                                    expression(0);
                                }
                            }
                            setState(121);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(124);
                match(RightParen);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final BuiltinTypeContext builtinType() throws RecognitionException {
        BuiltinTypeContext _localctx = new BuiltinTypeContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_builtinType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(126);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IntType) | (1L << BoolType) | (1L << StringType) | (1L << VoidType))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF) matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarDefTypeContext varDefType() throws RecognitionException {
        VarDefTypeContext _localctx = new VarDefTypeContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_varDefType);
        int _la;
        try {
            setState(140);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 10, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(128);
                    builtinType();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(129);
                    match(Identifier);
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(132);
                    _errHandler.sync(this);
                    switch (_input.LA(1)) {
                        case IntType:
                        case BoolType:
                        case StringType:
                        case VoidType: {
                            setState(130);
                            builtinType();
                        }
                        break;
                        case Identifier: {
                            setState(131);
                            match(Identifier);
                        }
                        break;
                        default:
                            throw new NoViableAltException(this);
                    }
                    setState(136);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    do {
                        {
                            {
                                setState(134);
                                match(LeftBracket);
                                setState(135);
                                match(RightBracket);
                            }
                        }
                        setState(138);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                    } while (_la == LeftBracket);
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final NewExpSizeDeclarationContext newExpSizeDeclaration() throws RecognitionException {
        NewExpSizeDeclarationContext _localctx = new NewExpSizeDeclarationContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_newExpSizeDeclaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(142);
                match(LeftBracket);
                setState(144);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AddOp) | (1L << SubOp) | (1L << LogicNotOp) | (1L << BitNotOp) | (1L << IncrementOp) | (1L << DecrementOp) | (1L << LeftParen) | (1L << LambdaStartSymbol) | (1L << NullConstant) | (1L << TrueConstant) | (1L << FalseConstant) | (1L << NewKw) | (1L << ThisPointer) | (1L << Identifier) | (1L << IntegerConstant) | (1L << StringConstant))) != 0)) {
                    {
                        setState(143);
                        expression(0);
                    }
                }

                setState(146);
                match(RightBracket);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarDefBodyContext varDefBody() throws RecognitionException {
        VarDefBodyContext _localctx = new VarDefBodyContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_varDefBody);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(148);
                varDefType();
                setState(149);
                varDefSingle();
                setState(154);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == Comma) {
                    {
                        {
                            setState(150);
                            match(Comma);
                            setState(151);
                            varDefSingle();
                        }
                    }
                    setState(156);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarDefSingleContext varDefSingle() throws RecognitionException {
        VarDefSingleContext _localctx = new VarDefSingleContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_varDefSingle);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(157);
                match(Identifier);
                setState(160);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == AssignOp) {
                    {
                        setState(158);
                        match(AssignOp);
                        setState(159);
                        expression(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SuiteContext suite() throws RecognitionException {
        SuiteContext _localctx = new SuiteContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_suite);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(162);
                match(LeftBrace);
                setState(166);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AddOp) | (1L << SubOp) | (1L << LogicNotOp) | (1L << BitNotOp) | (1L << IncrementOp) | (1L << DecrementOp) | (1L << LeftParen) | (1L << SemiColon) | (1L << LeftBrace) | (1L << LambdaStartSymbol) | (1L << IntType) | (1L << BoolType) | (1L << StringType) | (1L << VoidType) | (1L << NullConstant) | (1L << TrueConstant) | (1L << FalseConstant) | (1L << IfKw) | (1L << ForKw) | (1L << WhileKw) | (1L << BreakKw) | (1L << ContinueKw) | (1L << ReturnKw) | (1L << NewKw) | (1L << ThisPointer) | (1L << Identifier) | (1L << IntegerConstant) | (1L << StringConstant))) != 0)) {
                    {
                        {
                            setState(163);
                            statement();
                        }
                    }
                    setState(168);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(169);
                match(RightBrace);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final VarDefStmtContext varDefStmt() throws RecognitionException {
        VarDefStmtContext _localctx = new VarDefStmtContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_varDefStmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(171);
                varDefBody();
                setState(172);
                match(SemiColon);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IfStmtContext ifStmt() throws RecognitionException {
        IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_ifStmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(174);
                match(IfKw);
                setState(175);
                match(LeftParen);
                setState(176);
                expression(0);
                setState(177);
                match(RightParen);
                setState(178);
                statement();
                setState(181);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
                    case 1: {
                        setState(179);
                        match(ElseKw);
                        setState(180);
                        statement();
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final WhileStmtContext whileStmt() throws RecognitionException {
        WhileStmtContext _localctx = new WhileStmtContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_whileStmt);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(183);
                match(WhileKw);
                setState(184);
                match(LeftParen);
                setState(185);
                expression(0);
                setState(186);
                match(RightParen);
                setState(187);
                statement();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ForInitContext forInit() throws RecognitionException {
        ForInitContext _localctx = new ForInitContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_forInit);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(191);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 16, _ctx)) {
                    case 1: {
                        setState(189);
                        varDefBody();
                    }
                    break;
                    case 2: {
                        setState(190);
                        expression(0);
                    }
                    break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ForStmtContext forStmt() throws RecognitionException {
        ForStmtContext _localctx = new ForStmtContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_forStmt);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(193);
                match(ForKw);
                setState(194);
                match(LeftParen);
                setState(196);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AddOp) | (1L << SubOp) | (1L << LogicNotOp) | (1L << BitNotOp) | (1L << IncrementOp) | (1L << DecrementOp) | (1L << LeftParen) | (1L << LambdaStartSymbol) | (1L << IntType) | (1L << BoolType) | (1L << StringType) | (1L << VoidType) | (1L << NullConstant) | (1L << TrueConstant) | (1L << FalseConstant) | (1L << NewKw) | (1L << ThisPointer) | (1L << Identifier) | (1L << IntegerConstant) | (1L << StringConstant))) != 0)) {
                    {
                        setState(195);
                        forInit();
                    }
                }

                setState(198);
                match(SemiColon);
                setState(200);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AddOp) | (1L << SubOp) | (1L << LogicNotOp) | (1L << BitNotOp) | (1L << IncrementOp) | (1L << DecrementOp) | (1L << LeftParen) | (1L << LambdaStartSymbol) | (1L << NullConstant) | (1L << TrueConstant) | (1L << FalseConstant) | (1L << NewKw) | (1L << ThisPointer) | (1L << Identifier) | (1L << IntegerConstant) | (1L << StringConstant))) != 0)) {
                    {
                        setState(199);
                        ((ForStmtContext) _localctx).forCondition = expression(0);
                    }
                }

                setState(202);
                match(SemiColon);
                setState(204);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AddOp) | (1L << SubOp) | (1L << LogicNotOp) | (1L << BitNotOp) | (1L << IncrementOp) | (1L << DecrementOp) | (1L << LeftParen) | (1L << LambdaStartSymbol) | (1L << NullConstant) | (1L << TrueConstant) | (1L << FalseConstant) | (1L << NewKw) | (1L << ThisPointer) | (1L << Identifier) | (1L << IntegerConstant) | (1L << StringConstant))) != 0)) {
                    {
                        setState(203);
                        ((ForStmtContext) _localctx).forIncr = expression(0);
                    }
                }
